[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pintui"
version = "0.1.0"
description = "A cross-language design system for terminal UIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Alberto Cavalcante" }
]
keywords = ["terminal", "tui", "cli", "design-system", "colors", "progress"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
dependencies = [
    "colorama>=0.4.6",
    "halo>=0.0.31",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/albertocavalcante/pintui"
Repository = "https://github.com/albertocavalcante/pintui"
Issues = "https://github.com/albertocavalcante/pintui/issues"

[tool.hatch.build.targets.wheel]
packages = ["pintui"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
