[package]
name = "pintui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Paint your terminal beautifully — a TUI design system for Rust"
license = "MIT"
repository = "https://github.com/albertocavalcante/pintui"
homepage = "https://github.com/albertocavalcante/pintui"
documentation = "https://docs.rs/pintui"
readme = "../README.md"
keywords = ["tui", "terminal", "cli", "design-system", "colors"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
colored = "3"
dialoguer = "0.11"
indicatif = "0.18"
terminal_size = "0.4"
unicode-width = "0.2"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Allow casts for human-readable formatting (precision loss is acceptable)
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
# Allow if-let chains which are more readable than map_or_else
option_if_let_else = "allow"
# Allow indicatif template strings that look like format args
literal_string_with_formatting_args = "allow"
